# xzy-arbor

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: next-work-roadmap.md
docs/decisions/: AI_CHANGELOG.md
docs/spec/202606301019-data-safety-baseline/: 01_requirement.md  02_interface.md  03_implementation.md
docs/spec/lightweight-mindmap/: 01_requirement.md  02_interface.md  03_implementation.md
docs/superpowers/specs/: 2026-06-29-lightweight-mindmap-design.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: fileStorage.ts  history.test.ts  history.ts  layout.ts  tree.test.ts  tree.ts  types.ts
src/styles/: app.css
